library/general/externalip/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
tests:
- name: block-endpoint-default-role
  template: template.yaml
  constraint: samples/allowed-ip/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/allowed-ip/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed
    object: samples/allowed-ip/example_disallowed.yaml
    assertions:
    - violations: yes
